<resources>
    <string name="app_name">ChannelizeIO</string>
    <string name="places_api_key"></string>
    <string name="giphy_api_key"></string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="pm_signupmessage">No account yet? Create one</string>
    <string name="signup">Signup</string>
    <string name="pm_signinmessage">Already a member? Login</string>
    <string name="displayname">Display Name</string>
</resources>
